# arcology-mcp

./: .gitignore  Dockerfile  index_loader.py  mcpize.yaml  models.py  pyproject.toml  search.py  server.py
data/: content-index.json
